<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string translatable="false" name="app_name">DroidPlay</string>

  <!-- common -->
  <string name="cancel">Cancel</string>
  <string name="none">None</string>
  <string name="save">Save</string>
  <string name="select">Select</string>

  <!-- foreground service notification -->
  <string name="notification_service_ticker">DroidPlay: service running</string>
  <string name="notification_service_content_line1">DroidPlay running at:</string>
  <string name="notification_service_content_line3">Click to stop service.</string>

  <!-- Preference categories -->
  <string name="pref_category_gui">Graphical User Interface</string>
  <string name="pref_category_streaming">Streaming Media</string>
  <string name="pref_category_images">Images</string>
  <string name="pref_category_mirroring">Screen Mirroring</string>

  <!-- Preference keys (saved by app) -->
  <string translatable="false" name="pref_key_selected_service">selected_service</string>
  <string translatable="false" name="pref_key_selected_folder">selected_folder</string>

  <!-- Preference keys (saved by user): gui -->
  <string translatable="false" name="pref_key_folder_layout">folder_layout</string>
  <!-- Preference keys (saved by user): streaming -->
  <string translatable="false" name="pref_key_server_port">server_port</string>
  <!-- Preference keys (saved by user): images -->
  <string translatable="false" name="pref_key_image_transition">image_transition</string>
  <!-- Preference keys (saved by user): mirroring -->
  <string translatable="false" name="pref_key_resize_factor">resize_factor</string>
  <string translatable="false" name="pref_key_jpeg_quality">jpeg_quality</string>

  <!-- Preference default values (string) -->
  <string translatable="false" name="pref_val_folder_layout">list</string>
  <string translatable="false" name="pref_val_server_port">9999</string>
  <string translatable="false" name="pref_val_image_transition">@string/none</string>
  <string translatable="false" name="pref_val_jpeg_quality">80</string>

  <!-- Preference titles -->
  <string name="pref_title_folder_layout">Folder layout</string>
  <string name="pref_title_server_port">Server port</string>
  <string name="pref_title_image_transition">Transition</string>
  <string name="pref_title_resize_factor">Resize image</string>
  <string name="pref_title_jpeg_quality">JPEG quality</string>

  <!-- Preference summaries -->
  <string name="pref_summary_folder_layout">Set layout for display of content in folder</string>
  <string name="pref_summary_server_port">Set port for incoming connections</string>
  <string name="pref_summary_image_transition">Set behavior for transition</string>
  <string name="pref_summary_resize_factor">Resize image before sending to client</string>
  <string name="pref_summary_jpeg_quality">Set JPEG quality</string>

  <!-- ui/DroidPlayActivity -->
  <string name="main_activity_subtitle_not_connected">Not connected</string>
  <string name="main_activity_drawer_item_connect">Connect to AirPlay...</string>
  <string name="main_activity_drawer_item_mirror">Mirror Screen</string>
  <string name="main_activity_drawer_item_pictures">Pictures</string>
  <string name="main_activity_drawer_item_videos">Videos</string>
  <string name="main_activity_drawer_item_downloads">Downloads</string>
  <string name="main_activity_drawer_item_folders">Choose folder...</string>
  <string name="main_activity_drawer_item_stop">Stop playback</string>

  <!-- ui/SettingsActivity -->
  <string name="settings_activity_subtitle">@string/main_menu_item_settings</string>
  <string name="pref_resize_dialog_text">Select image resize factor:</string>
  <string name="settings_activity_port_range">Port number must be between %1$d and %2$d</string>
  <string name="settings_activity_value">\nValue:\u0020</string>

  <!-- ui/dialogs/ConnectDialog -->
  <string name="dialog_connect_title">Select AirPlay Service</string>

  <!-- ui/dialogs/FolderDialog -->
  <string name="dialog_folders_title">Select Folder</string>

  <!-- res/layout/connect -->
  <string name="layout_connect_cancel">@string/cancel</string>
  <string name="layout_connect_empty">-- No services found --</string>

  <!-- res/layout/folder -->
  <string name="layout_folder_cancel">@string/cancel</string>
  <string name="layout_folder_select">@string/select</string>

  <!-- res/layout/main -->
  <string name="layout_main_empty">-- No files found --</string>

  <!-- res/layout/settings -->
  <string name="layout_settings_server_port">Server port number:</string>
  <string name="layout_settings_requires_restart">(Requires application restart)</string>
  <string name="layout_settings_image_transition">Image transition:</string>

  <!-- res/menu/main_actions -->
  <string name="main_menu_item_open_drawer">Open Drawer</string>
  <string name="main_menu_item_settings">Settings</string>
  <string name="main_menu_item_exit">Exit</string>

  <!-- res/menu/settings_actions -->
  <string name="settings_menu_item_cancel">@string/cancel</string>
  <string name="settings_menu_item_save">@string/save</string>

  <!-- res/values/arrays -->
  <string name="pref_names_folder_layout_list">List: Icon + File Name [Default]</string>
  <string name="pref_names_folder_layout_grid">Grid: Thumbnail</string>
  <string name="pref_names_image_transition_none">None [Default]</string>
  <string name="pref_names_image_transition_random">Random</string>
  <string name="pref_names_image_transition_dissolve">Dissolve</string>
  <string name="pref_names_image_transition_slideleft">Slide left</string>
  <string name="pref_names_image_transition_slideright">Slide right</string>
  <string name="pref_names_jpeg_quality_80">80 [Default]</string>

  <!-- Toast notification messages -->
  <string name="toast_error">Error</string>
  <string name="toast_error_discovery_service">Unable to initialize discovery service</string>
  <string name="toast_error_file_type">Unknown file type</string>
  <string name="toast_error_image">Error sending image</string>
  <string name="toast_error_local_address">Unable to get local IP address</string>
  <string name="toast_error_video">Error sending video link</string>
  <string name="toast_error_video_stopped">Error sending request to stop video</string>
  <string name="toast_image">Sent image</string>
  <string name="toast_local_address">Using local address</string>
  <string name="toast_service_connected">Using AirPlay service</string>
  <string name="toast_service_found">Found AirPlay service</string>
  <string name="toast_service_removed">Removed AirPlay service</string>
  <string name="toast_service_resolved">Resolved AirPlay service</string>
  <string name="toast_video">Sent video link</string>
  <string name="toast_video_stopped">Sent request to stop video</string>

</resources>
